tests/paczka1/fuzzy1/39595001.err
Error in line 11: S161 S161 0,74
Error in line 26: o5CrJYo0 S770 8,9
Error in line 30: DMW S77ä 5ä,4
